# euthymia

./: .gitignore  CMakeLists.txt  README.md
headers/: core.hpp  entity.hpp  params.hpp  rng.hpp  tick.hpp
src/: core.cpp  main.cpp  rng.cpp  tick.cpp
